# buddy

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  Selector.tsx  Settings.tsx  config.ts  index.css  main.tsx  pipeline.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  screenshot.rs
src/components/: Overlay.tsx
src/components/ui/: badge.tsx  card.tsx
