[package]
name = "buddy"
version = "0.1.0"
description = "Cross-platform desktop AI assistant"
authors = []
edition = "2021"
rust-version = "1.70"
default-run = "buddy"

[lib]
name = "buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
xcap = "0.8"
base64 = "0.22"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
